# neurs

./: LICENSE  README.md
ai/: requirements.txt
ai/src/: agent.py
app/: package.json
app/src/: App.tsx
app/src/pages/: Dashboard.tsx
program/: Anchor.toml  Cargo.toml
program/src/: lib.rs
program/tests/: zenith.ts
